# ark-srs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
data/aztec20/: checksums
scripts/: download_srs_aztec.sh  download_transcripts_aztec.sh
src/: aztec20.rs  constants.rs  kzg10.rs  lib.rs  load.rs
src/kzg10/: aztec20.rs
