[package]
name = "ark-srs"
version = "0.2.0"
description = "A utility crate that simplifies reuse of Common/Structured Reference String (CRS/SRS) from past trusted setup ceremonies, especially for SNARK"
authors = ["Alex Xiong <alex.xiong.tech@gmail.com>"]
edition = "2021"
repository = "https://github.com/alxiong/ark-srs"
homepage = "https://github.com/alxiong/ark-srs"
documentation = "https://docs.rs/ark-srs"
readme = "README.md"
keywords = ["cryptography", "trusted-setup", "zksnark", "SRS"]
categories = ["cryptography"]
license = "MIT"
exclude = [
    "*.bin"
]
[dependencies]
anyhow = "1.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
hex-literal = "0.4.1"
sha2 = "0.10.8"

[dev-dependencies]
ark-poly = "0.4.2"
dotenv = "0.15.0"

[features]
std = []

[[bin]]
name = "save-aztec-srs"
path = "src/bin/save_aztec_srs.rs"
