[package]
name = "ark-srs"
version = "0.3.3"
description = "A utility crate that simplifies reuse of Common/Structured Reference String (CRS/SRS) from past trusted setup ceremonies, especially for SNARK"
authors = ["Alex Xiong <alex.xiong.tech@gmail.com>"]
edition = "2021"
repository = "https://github.com/alxiong/ark-srs"
homepage = "https://github.com/alxiong/ark-srs"
documentation = "https://docs.rs/ark-srs"
readme = "README.md"
keywords = ["cryptography", "trusted-setup", "zksnark", "SRS"]
categories = ["cryptography"]
license = "MIT"
exclude = [
    "*.bin",
    "scripts/*",
]
[dependencies]
anyhow = "1.0"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly-commit = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
directories = "5.0.1"
hex-literal = "0.4.1"
rand = "0.8.5"
sha2 = "0.10.8"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
ureq = "2.9.6"

[dev-dependencies]
ark-poly = "0.5"
dotenv = "0.15.0"
tempfile = "3.10.1"

[features]
std = []
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly-commit/parallel",
    "ark-serialize/parallel",
    "ark-std/parallel",
]

[[bin]]
name = "save-aztec-srs"
path = "src/bin/save_aztec_srs.rs"
